# tcebot_description

./: README.md  package.xml  setup.cfg  setup.py
config/: ekf.yaml
launch/: display.launch.py  robot_description.launch.py  state_publisher.launch.py
meshes/: base_link.stl  camera.stl  caster.stl  left_wheel.stl  lidar.stl  right_wheel.stl
rviz/: config.rviz  display.rviz
urdf/: camera.urdf.xacro  common_properties.urdf.xacro  materials.xacro  rplidar.urdf.xacro  tcebot.urdf.xacro  wheel_left.urdf.xacro  wheel_right.urdf.xacro
