<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tcebot_description</name>
  <version>1.0.0</version>
  <description>
    The `tcebot_description` package provides the URDF/Xacro description files for the TCEBot robot. 
    It includes necessary dependencies for visualization and simulation in ROS 2.
  </description>
  
  <maintainer email="dhanushshettigar90@gmail.com">Dhanush M</maintainer>
  <license>Apache-2.0</license>

  <depend>joint_state_publisher</depend>
  <depend>robot_state_publisher</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
